# MAGI

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  README_zh.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
deploy/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  entrypoint.dev.sh  update.sh
docs/: D.28-channel-dispatcher.md  ROADMAP.md
magi/: __init__.py  __main__.py
magi/WebUI/: package-lock.json  package.json  tsconfig.json  vite.config.ts
magi/WebUI/src/: App.tsx  main.tsx  styles.css
magi/agent/: __init__.py  agent.py  auto_title.py  compaction.py  loop.py  sessions.py  system_prompt.py  token_usage.py  tokens.py  workspace.py
magi/agent/db/: __init__.py  base.py  engine.py  local_db.py  migrations.py  models_action_item.py  models_dashboard.py  models_department.py  models_employee.py  models_org.py  models_token_usage.py  models_user_im_binding.py
magi/agent/llm/: __init__.py  anthropic.py  claude.py  factory.py  minimax.py  provider.py
magi/agent/memory/: __init__.py  models.py  prompt.py  store.py  tools.py
magi/agent/proactive/: cron_utils.py  orm_models.py  runner.py  scheduler.py
magi/agent/prompts/: __init__.py  bot_replies.yaml  chat_titles.md  contact_block.md  memory_block.md  skills_block.md  soul.md
magi/agent/sessions/: __init__.py  auto_title.py  errors.py  ids.py  migration.py  models.py  store.py  tables.py
magi/agent/skills/: __init__.py  loader.py  loader_tool.py
magi/agent/state/: __init__.py  orm.py
magi/agent/tools/: __init__.py  _safe_path.py  action_item.py  base.py  bash.py  edit_file.py  list_files.py  mcp_loader.py  read_file.py  registry.py  schedule_task.py  search_sessions.py  send_message.py  skill_loader.py  skill_loader_tool.py  write_file.py
magi/agent/workspace/: __init__.py  bootstrap.py  paths.py
magi/channels/: __init__.py  base.py  dispatcher.py
magi/channels/telegram/: __init__.py  adapter.py  bot.py  config.py
magi/channels/webui/: __init__.py  app.py
magi/node/: __init__.py
magi/runtime/: __init__.py  agent.py  auto_title.py  sessions.py  tokens.py  workspace.py
magi/runtime/llm/: __init__.py  errors.py  factory.py  minimax.py  provider.py
magi/runtime/proactive/: cron_utils.py  orm_models.py  runner.py  scheduler.py
magi/runtime/prompts/: __init__.py  bot_replies.yaml  compaction.md  fallback_persona.md
magi/runtime/skills/: __init__.py  loader.py  loader_tool.py
magi/runtime/state/: __init__.py  local_db.py  orm.py  settings.py
magi/runtime/tools/: __init__.py  base.py  list_files.py  mcp-example.json  mcp_loader.py  read_file.py  registry.py  schedule_task.py  search_sessions.py  send_message.py  write_file.py
web/: index.html  package.json  tsconfig.json  vite.config.js
(+115 files in other folders)
