[project]
name = "magi"
version = "0.1.0"
description = "MAGI — Modular Agentic Governed Intelligence. Localized enterprise agent system with Adam (control plane) and one EVE (Everyday Virtual Employee) per employee over Telegram."
authors = [
    { name = "Taki", email = "taki.wang@ualberta.ca" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Adam web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Validation / settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # HTTP client (used by EVE's agent_client and llm/ollama)
    "httpx>=0.27.0",
    # SKILL.md frontmatter parser (skills/ loader) — keep
    # PyYAML on the critical path so the operator's
    # skills parse correctly on every install. The
    # loader also has a tiny line-prefix fallback for
    # flat ``key: value`` shapes if PyYAML is missing.
    "pyyaml>=6.0",
    # Structured logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
# Phase 1 baseline extras (used by Adam & EVE at runtime)
adam = [
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.6",
    "jinja2>=3.1.4",
    # D.X — MCP (Model Context Protocol) client. Optional:
    # the tool loader falls back gracefully when this lib
    # is missing or when no mcp.json is configured, so
    # an Adam install without MCP just runs without the
    # MCP tool wedge. Listed as required because the
    # typical Adam deployment uses MCP.
    "mcp>=1.0.0",
]
eve = [
    "python-telegram-bot[ext]>=21.7",
    "apscheduler>=3.10.4",
    "anthropic>=0.39.0",
    "openai>=1.54.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
# Single entry point. Whether the process plays Adam or EVE is decided at
# runtime by MAGI_NODE_ROLE (see `magi.__main__`). One image, one binary,
# one supply chain.
magi = "magi.__main__:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# Flat layout: pyproject.toml at the repo root, the `magi` Python package
# sits one level down in ``./magi/``. ``module-root = ""`` (empty) means
# "look for the package directly under the project root" instead of the
# default ``src/`` layout.
module-name = "magi"
module-root = ""

[tool.uv]
# Single project, NOT a workspace — see architecture plan.
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]